--- a/details/nailtour_event.html
+++ b/details/nailtour_event.html
@@ -51,31 +51,31 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/Naeiltour/nailtour_event/event_01.jpg" alt="">
+                  <img src="../assets/img/event/nailtour_event/event_01.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/Naeiltour/nailtour_event/event_02.jpg" alt="">
+                  <img src="../assets/img/event/nailtour_event/event_02.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/Naeiltour/nailtour_event/event_03.jpg" alt="">
+                  <img src="../assets/img/event/nailtour_event/event_03.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/Naeiltour/nailtour_event/event_04.jpg" alt="">
+                  <img src="../assets/img/event/nailtour_event/event_04.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/Naeiltour/nailtour_event/event_05.jpg" alt="">
+                  <img src="../assets/img/event/nailtour_event/event_05.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/Naeiltour/nailtour_event/event_06.jpg" alt="">
+                  <img src="../assets/img/event/nailtour_event/event_06.jpg" alt="">s
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/Naeiltour/nailtour_event/event_07.jpg" alt="">
+                  <img src="../assets/img/event/nailtour_event/event_07.jpg" alt="">
                 </div>
 
 
