--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>김현미</h3>
             <p class="fst-italic"><br>
-				웹디자인, UIUX디자인, 코딩(html/css), 사진촬영 , 기타 디자인 , 영상 편집 <br><br>
+				웹, UIUX, 로고, 인쇄 디자인<br>				
+				사진촬영, 영상 편집, SNS(블로그, 카드뉴스) <br>
+				코딩 (HTML/CSS/JavaScript)<br><br>
 				lillaya@naver.com <br>
 				010 - 3125 - 2309 <br><br>
 								
@@ -605,7 +607,7 @@
                 <div class="portfolio-links">
 <!--                  <a href="assets/img/sns/sns_07.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="김포문화재단 인터뷰 <br> 애기봉평화생태공원 개관을 준비"><i class="bx bx-plus"></i></a>-->
                   <a href="https://www.instagram.com/p/CUZdNowJa6D/?utm_source=ig_web_copy_link"  target="_blank"><i class="bx bi-instagram"></i></a>
-				  <a href="portfolio_sns_07_details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>					
+				  <a href="details/portfolio_sns_07_details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>					
                 </div>
               </div>
             </div>
@@ -622,7 +624,7 @@
 <!--                  <a href="assets/img/sns/sns_06.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="김포문화재단 <br> 라베니체페스티벌 메디코델라 코로나 시니어 패션쇼"><i class="bx bx-plus"></i></a>-->
                   <a href="https://www.instagram.com/p/CSNpzc5JhjZ/?igsh=MWE4cHBvbm1sNjZpZw%3D%3D"  target="_blank"><i class="bx bi-instagram"></i></a>
                   <a href="https://www.instagram.com/tv/CSNp89epvsH/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="  target="_blank"><i class="bx bx-play-circle"></i></a>
-				  <a href="portfolio_sns_06_details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+				  <a href="details/portfolio_sns_06_details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -638,7 +640,7 @@
                 <div class="portfolio-links">
 <!--                  <a href="assets/img/sns/sns_05.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="김포문화재단 <br> 경기틴즈 뮤지컬 참여자 오디션"><i class="bx bx-plus"></i></a>-->
                   <a href="https://www.instagram.com/p/CP9sUIQJjuF/?utm_source=ig_web_copy_link"  target="_blank"><i class="bx bi-instagram"></i></a>
-				  <a href="portfolio_sns_05_details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+				  <a href="details/portfolio_sns_05_details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -656,7 +658,7 @@
                   <a href="https://www.instagram.com/p/CPh8FbmJ9ZT/?utm_source=ig_web_copy_link"  target="_blank"><i class="bx bi-instagram"></i></a>
 					<a href="https://www.instagram.com/p/CPh8oPCJp1d/?utm_source=ig_web_copy_link"  target="_blank"><i class="bx bx-play-circle"></i></a>
 					
-				  <a href="portfolio_sns_04_details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+				  <a href="details/portfolio_sns_04_details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -690,7 +692,7 @@
 <!--                  <a href="assets/img/sns/sns_03.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="김포문화재단 <br> 모담골 예절학당 "><i class="bx bx-plus"></i></a>                  -->
                   <a href="https://www.instagram.com/p/CPZdp1Op2xY/"  target="_blank"><i class="bx bi-instagram"></i></a>
 				  <a href="https://www.instagram.com/p/CPZdbwrpzkn/?igsh=MXh5dmh6M3JrM2p1ag%3D%3D"  target="_blank"><i class="bx bx-play-circle"></i></a>
-				  <a href="portfolio_sns_03_details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+				  <a href="details/portfolio_sns_03_details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -707,7 +709,7 @@
 <!--                  <a href="assets/img/sns/sns_02.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="김포문화재단 <br> 드림아티스트 오페라 웹툰작가 인터뷰"><i class="bx bx-plus"></i></a>                  -->
                   <a href="https://www.instagram.com/p/CPPjHfEJ6Ya/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="  target="_blank"><i class="bx bi-instagram"></i></a>
 				  <a href="https://www.instagram.com/p/CPPjD0Qpm-b/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="  target="_blank"><i class="bx bx-play-circle"></i></a>
-				  <a href="portfolio_sns_02_details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+				  <a href="details/portfolio_sns_02_details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -723,7 +725,7 @@
                 <div class="portfolio-links">
 <!--                  <a href="assets/img/sns/sns_01.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="김포문화재단 <br> 오페라 연습현장"><i class="bx bx-plus"></i></a>-->
                   <a href="https://www.instagram.com/p/CObfj4npHMG/?utm_source=ig_web_copy_link"  target="_blank"><i class="bx bi-instagram"></i></a>
-				  <a href="portfolio_sns_01_details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+				  <a href="details/portfolio_sns_01_details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -737,7 +739,7 @@
                 <p>Book띠끄</p>
                 <div class="portfolio-links">
 <!--                  <a href="assets/img/sns/sns_08.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="김포문화재단 <br> Book띠끄"><i class="bx bx-plus"></i></a>-->
-				  <a href="portfolio_sns_08_details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+				  <a href="details/portfolio_sns_08_details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
